# peers

./: .gitignore  Containerfile  Makefile  README.md  README_DE.md  compose.yaml  pyproject.toml  pytest.ini
auth-proxy/: Containerfile
docs/: HOWTO-audit-and-fix.md  HOWTO-audit-and-fix_DE.md  MODES_IMPLEMENT.md  MODES_IMPLEMENT_DE.md  SECURITY.md  SECURITY_DE.md  WORKFLOWS_DEVELOP_RESEARCH.md  WORKFLOWS_DEVELOP_RESEARCH_DE.md
proxy/: Containerfile.proxy  entrypoint.sh  filter-allow.txt  tinyproxy.conf
scripts/: pre-push.sh
src/auth_proxy/: __init__.py  oauth_refresh.py  server.py
src/peers/: __init__.py  __main__.py  _driver_orchestrator_impl.py  agent_invoke.py  anti_cheat_guard.py  async_gate_runner.py  attest.py  billing.py  budget_accountant.py  bug_hunt.py  cli.py  codemap.py  codemap_gen.py  comm_layer.py  driver_gate_pipeline.py  driver_helpers.py  driver_host.py  driver_lifecycle.py  driver_observability.py  driver_orchestrator.py  driver_peer_health.py  driver_soft_reviews.py  driver_tick_hooks.py  goal_engine.py  goal_reload.py  goals.py  graphify_mcp.py  graphify_sidecar.py  health_guard.py  help_man.py  liveness.py  model_provider.py  modes.py  peek.py  peer_spec.py  prompt_builder.py  rate_limit.py  recon.py  regression_baseline.py  report.py  (+7 more)
src/peers_ctl/: __init__.py  __main__.py  cli.py  compare.py  contracts.py  dashboard_live.py  doctor.py  justifications.py  plan_parser.py  replay.py  runner.py  store.py
tests/: conftest.py
tests/fixtures/: fake_cli_api_error.sh  fake_cli_fail.sh  fake_cli_grandchild_holds_pipe.sh  fake_cli_mojibake.sh  (+8 more)
(+523 files in other folders)
